# jira-select

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  readme.md  requirements.txt  setup.cfg  setup.py  temp.yaml
.github/workflows/: build.yml  lint.yml  test.yml
docs/: appendix.rst  commands.rst  conf.py  evaluation_location.csv  examples.rst  extending.rst  functions.rst  how_to.rst  index.rst  parameters.rst  query.rst  query_lifecycle.rst  quickstart.rst  requirements.txt  run.py  troubleshooting.rst
docs/source/: jira_select.commands.rst  jira_select.formatters.rst  jira_select.functions.rst  jira_select.rst  modules.rst  tests.rst
gui/: package-lock.json  package.json  repackage.js
gui/src/: App.scss  App.tsx  jira_select_client.ts  store.ts
gui/src-tauri/: tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/features/queryBuilder/: queryBuilderSlice.ts  thunks.ts  types.ts
gui/src/features/queryBuilder/components/: Editor.tsx  Grid.tsx  LoadingIndicator.tsx  QueryBuilder.tsx  Search.tsx  ToolBar.tsx
gui/src/features/queryBuilder/components/modal/: AddInstance.tsx  Modal.tsx
gui/src/features/queryBuilder/components/sideBar/: FieldNames.tsx  Functions.tsx  Settings.tsx
jira_csv/: constants.py  plugin.py  utils.py
jira_csv/commands/: store_password.py
jira_select/: __init__.py  __main__.py  cache.py  cmdline.py  constants.py  exceptions.py  plugin.py  query.py  types.py  utils.py
jira_select/commands/: batch.py  build_query.py  configure.py  find_field.py  functions.py  install_user_script.py  remove_instance.py  run.py  run_script.py  schema.py  setup_instance.py  shell.py  show_instances.py  store_password.py
jira_select/commands/gui/: __init__.py  editor.py  grid.py  main.py
jira_select/formatters/: csv.py  html.py  json.py  raw.py  table.py  tsv.py
jira_select/functions/: array_item.py  array_len.py  coalesce.py  estimate_to_days.py  extract.py  field_by_name.py  flatten_changelog.py  flatten_list.py  get_issue.py  get_issue_snapshot_on_date.py  get_linked_issue_keys.py  get_sprint.py  get_sprint_by_id.py  get_sprint_by_name.py  interval_business_hours.py  interval_matching.py  interval_size.py  intervals_matching.py  json_dumps.py  now.py  parse_date.py  parse_datetime.py  simple_filter.py  simple_filter_any.py  sprint_details.py  sprint_name.py  subquery.py  union.py  workdays_in_state.py
jira_select/sources/: boards.py  issues.py  sprints.py
pyinstaller/: Makefile  jira_select.exe.spec  jira_select.spec  requirements.txt
tests/: base.py  conftest.py  test_functions.py  test_query.py  test_utils.py
